# hex_collapse_plugin

./: CMakeLists.txt  hex_collapse.cpp  hex_collapse.h  interface.cpp
